# gbase

./: .env.example  .forge_test_instructions  .gitattributes  .gitignore  CHANGELOG.md  HAMMER_TASK.md  LICENSE  README.md  _audit_runner.py  forge-audit-gbase.md  main.py  pyproject.toml  requirements.txt  translate_temp.py
.evolution/: rules.json
.github/workflows/: ci.yml
arms/hammer/: system_prompt.txt
data/: search_history.jsonl
data/arms/hammer/: mirror.db
data/chat/sessions/: 4071daa5-a0b.jsonl  9d1ea13b-7e0.jsonl
docs/: WHITEPAPER.md  api-reference.md  cli.md  core-concepts.md  index.md  installation.md
editions/: __init__.py
examples/: 01_hello_gbase.py  02_quick_chat.py  03_agent_as_server.py  03_memory_demo.py  04_memory_persistence.py  05_rsi_demo.py  __init__.py
gbase/: __init__.py  __main__.py  cli.py
gbase/thinking/: __init__.py  context.py  execution.py  middleware.py  reflection.py  router.py
lib/: .gitignore  VERSION.md  archive_store.py  auto_learn.py  backup.py  battle_protocol.py  cognifold.py  dag_agents.py  dag_engine.py  dag_orchestrator.py  daily_memory.py  evolution_engine.py  exec.py  experience.py  fetcher.py  identity.py  kernel.py  lifeline.py  loop_cache.py  mirror.py  monitor.py  path_safety.py  pipeline.py  project_memory.py  rss_fetcher.py  safe_shell.py  sandbox_safety.py  scheduler.py  session.py  skill_loader.py  skill_router.py  sleep_cycle.py  storage.py  territory.py  toolkit.py  trace_review.py  tracer.py  village_connector.py
lib/channels/: feishu.py  webchat.py
lib/neocortex/: distiller.py  engine.py  scanner.py  schema.py  store.py
rules/: AGENCY.md  CONSTITUTION.md  EVOLUTION.md  FINISH.md  INVESTIGATE.md  THINKING.md  WORKFLOW.md  meta-rules.md
tools/: __init__.py  anchor_keeper.py  anysearch_tool.py  archive_search.py  chain.py  commit_helper.py  cron.py  crypto_helper.py  cua_tools.py  data_seeder.py  distill.py  docx_gen.py  exec.py  feishu_card.py  feishu_send.py  feishu_send_file.py  file_checker.py  forge_verify.py  gbchat.html  gen_pro_report.py  glink_projects.py  hive_mind.py  honeycomb_search.py  jwt_helper.py  knowledge.py  laser_doc.py  learn.py  log_profiler.py  mail.py  memory_profiler.py  mirror_tool.py  mock_server.py  my_path.py  network_tools.py  note_tool.py  pdf_gen.py  pptx_gen.py  prompt_helper.py  qa_check.py  query_profiler.py  (+20 more)
webchat/: index.html
