[project]
name = "gbase"
version = "0.2.1"
description = "Universal AI Agent framework with identity separation, tool auto-registration, and multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["ai", "agent", "framework", "workflow", "orchestration"]
authors = [{ name = "Gary Lin" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.dependencies]
httpx = ">=0.28.1"
pyyaml = ">=6.0.3"
beautifulsoup4 = ">=4.14.3"
aiohttp = ">=3.13.3"
openai = ">=2.24.0"
openpyxl = ">=3.1.5"
python-pptx = ">=1.0.2"

[project.optional-dependencies]
server = ["uvicorn>=0.34.0"]


[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG", "PIE"]
ignore = [
    "E501",
    "E402",
    "SIM115",
    "PLR0913",
    "PLR0911",
    "PLR0912",
]
per-file-ignores = {"lib/dag_agents.py" = ["ARG001", "ARG002"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.isort]
profile = "black"
line_length = 120


[tool.setuptools.packages.find]
include = ["lib*", "tools*", "editions*", "gbase*"]
exclude = ["data*", "identities*", "training_data*"]
